resizing to fix issues on smaller screen devices

--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,18 @@ body{
 @media(max-width:480px){
   
   body{
-    max-width:480px;
+    max-width:500px;
+    overflow-x:hidden;
+
   }
   
 }
 
 @media(max-width:768px){
   body{
-    max-width:768px;
+    max-width:788px;
+    overflow-x:hidden;
+   
   }
 }
 
